[package]
name = "gui_iced"
version = "0.1.0"
authors = ["rankun <rankun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features = ["tokio"] }
iced_native = { git = "https://github.com/hecrj/iced" }
tokio = {version = "0.2.*", features = ["full"] }
