[package]
name = "record_screen"
version = "0.1.0"
authors = ["rankun <rankun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5.0" # 屏幕采集
cpal = "0.8" # 音频采集
quest = "0.3" # 命令行处理
webm = "1" # webm封装器
vpx-encode = {version="0.4.1", features=["vp9"]} # vpx视频编码器
opus = "0.2" # opus音频编码器
sample = "0.10"
