[package]
name = "async"
version = "0.1.0"
authors = ["rankun <rankun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1" # rust官方提供等runtime包
tokio = {version = "1.32.0", features = ["full"] }

[features]
default = ["use_tokio_main"]

use_rust_futures = []
use_tokio_s = []
use_tokio_m = []
use_tokio_main = []
