[package]
name = "tokio_task"
version = "0.1.0"
authors = ["rankun <rankun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.3", features = ["full"] }
lazy_static = "1.4.0"
parking_lot = "0.11.0"